--- a/Laboration4Affärssystem/Laboration4Affärssystem/Laboration4Affärssystem.csproj
+++ b/Laboration4Affärssystem/Laboration4Affärssystem/Laboration4Affärssystem.csproj
@@ -48,25 +48,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller.cs" />
-    <Compile Include="RecieptForm.cs">
+    <Compile Include="Model\Inventory.cs" />
+    <Compile Include="View\RecieptForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RecieptForm.Designer.cs">
+    <Compile Include="View\RecieptForm.Designer.cs">
       <DependentUpon>RecieptForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Item.cs" />
-    <Compile Include="View.cs">
+    <Compile Include="Model\Item.cs" />
+    <Compile Include="View\View.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View.Designer.cs">
+    <Compile Include="View\View.Designer.cs">
       <DependentUpon>View.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="RecieptForm.resx">
+    <EmbeddedResource Include="View\RecieptForm.resx">
       <DependentUpon>RecieptForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View.resx">
+    <EmbeddedResource Include="View\View.resx">
       <DependentUpon>View.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
