add archiveform and transactions

--- a/Laboration4Affärssystem/Laboration4Affärssystem/Laboration4Affärssystem.csproj
+++ b/Laboration4Affärssystem/Laboration4Affärssystem/Laboration4Affärssystem.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller.cs" />
+    <Compile Include="Model\TransactionArchive.cs" />
+    <Compile Include="Model\Transaction.cs" />
     <Compile Include="Model\Inventory.cs" />
     <Compile Include="View\RecieptForm.cs">
       <SubType>Form</SubType>
